client/src/scenes/visualizer/pianoFretboard/styles.css
.piano-container {
    margin-left: 8px;
    margin-right: 8px;
}

.keyboard{
    position: relative;
    margin: 0 auto;
    background-color: rgb(40, 31, 18);

    width: 100%;
    min-width: 300px;
    height: 32vw;
    height: 29vw; /* bring it to the size of freboard at viewport width === 414px */
    
    box-shadow: inset -1px 0px 11px 0px rgba(0, 0, 0, 0.75);
    
    /* padding: 5vw 5vw 0 5vw; removed to make left-right black bar case margin symmetrical */
    /* padding: 5vw 0vw 0 5vw; */ /* added to make left-right black bar case margin symmetrical */
                            /* this setting seems to work for 2 octave piano */

    /* padding: 5vw 3vw 0 5vw; this setting seems to work for 1 octave piano */
    border-radius: 2.03045vw;
    
    /* Unselectable text */
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;

    box-sizing: border-box;

    display: flex;
    padding-left: 5vw;
    padding-right: 5vw;
    padding-top: 5vw;

    max-height: 264px;
    max-width: 951px;
    
}

.keyboard li {
    background-color: white;
    padding: 0;
    list-style: none;
    position: relative;
    float: left;
  }

.key.black{
    height: 13vw;
    height: 15vw;
    width: 3.6%;
    margin: 0 0 0 0;

    /* left: -2.2%; */
    left: -1.8%;
    z-index: 2;
    border-radius: 0 0 0.1875em 0.1875em;
    box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset, 0 -5px 2px 3px rgba(0,0,0,0.6) inset, 0 2px 4px rgba(0,0,0,0.5);
    background-color: black;
    
    background:linear-gradient(45deg, #222 0%,#555 100%);

    max-height:141px;
}



.key.white{
    color: grey;
    height: 27.5vw;
    height: 25vw;
    width: 7%;
    z-index: 1;
    border-left: 1px solid #bbb;
    border-bottom: 1px solid #bbb;
    box-shadow: -1px 0 0 rgba(255,255,255,0.8) inset, 0 0 5px #ccc inset, 0 0 3px rgba(0,0,0,0.2);

    max-height: 227px;
}

.key.white:first-child {
    border-bottom-left-radius: 3px;
    border-top-left-radius: 3px;
}
.key.white:last-child {
    border-bottom-right-radius: 3px;
    border-top-right-radius: 3px;
}

.keyboard .note {
    opacity: 0;
    display:block;
    line-height: initial;
    border-radius: 50%;
    background-color: rgb(209, 129, 14);
    text-shadow: 0px 1px 2px rgb(68, 68, 68);
    box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.75);
    color: white;
    top: 70%;
    bottom: "100%";
    position: relative;
    text-align: center;
    margin: 0 auto;

    /* width: 18px;
    height: 18px;
    line-height: 18px;
    font-size: 12px; 414px conversion */

    width: 16px;
    line-height: 16px;
    height: 16px;
    font-size: 10px; 

   
    
}

.keyboard .note.visible { /* updated in fixing CSS clash between guitar and piano*/ 
    opacity: 100%;
}



.key.black .keyboardNote {
    position: absolute;
    bottom: 10%;
    height: 2.5vw;
    width: 2.5vw;
    line-height: 2.5vw;
    font-size: 1.6vw;
    border-radius: 50%;
    text-align: center;
    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
    color: white;
    background-color: rgb(209, 129, 14);


}



.key.white .keyboardNote {
    position: absolute;
    bottom: 10%;
    margin: 0 auto;
    height: 2.5vw;
    width: 2.5vw;

    border-radius: 50%;
    text-align: center;
    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
    color: white;
    background-color: rgb(209, 129, 14);

    line-height: 2.5vw;
    font-size: 2vw;
}

.keyboard.oneOctave .key.white {
    width: 14%;
    width: calc(100% / 7);
    position: relative;
}
.keyboard.oneOctave .key.black {
    width: 7.2%;
    position: absolute;
    left: -29%;
    width: 60%;
}
.keyboard.oneOctave .key.white.left {
    /* margin: 0 0 0 -7.4%; */
}


/* three octave */
.keyboard.threeOctave .key.white {
    width: calc(100% / 21);
    position: relative;

    @media screen and (max-width: 367px) { 
        /* three octave solution requires this breakpoint as it starts to break around here */
        width: calc(100% / 22.6);
    }
}

.keyboard.threeOctave .key.black {
    position: absolute;
    left: -29%;
    width: 60%;
}

.keyboard.threeOctave .key.black .note {
    top:75%;

    @media screen and (max-width: 610px) { 
        left:-1px;
        top:70%;
    }
    @media screen and (max-width: 553px) { 
        left:-2px;
    }

    @media screen and (max-width: 410px) { 
        top: 65%;
    }
}
/* /three octave */



.keyboard.twoOctave .key.black {
    width: 3.6%;
}
.keyboard.twoOctave .key.white.left {
    margin:0 0 0 -3.7%;
}
.keyboard.twoOctave .key.white .keyboardNote {
    margin-left: 25%;
}



.keyboard.twoOctave .key.white {
    /* width: 6.7%; the left-right black keyboard case margins weren't equal */
    width: calc(100% / 14);
}
.keyboard.twoOctave .key.black {
    width: 3.6%;
}
.keyboard.twoOctave .key.white.left {
    margin:0 0 0 -3.7%;
}
.keyboard.twoOctave .key.white .keyboardNote {
    margin-left: 25%;
}

.key.white.threeOctave {
    width: 4.8%;
    width: calc(100% / 21);
}
.key.black.threeOctave {
    width: 3.6%;
}
.key.white.threeOctave.left {
    margin:0 0 0 -4.2%;
}
.key.white.threeOctave .keyboardNote {
    margin-left: 6%;
}

.key.white .note{
    top:80%;
}


/* Media Queries */

/* for some reason the note marker isnt centered when the width of .key.black is so low. on max-width 521px we can abandon */
/* maybe there's a less hacky fix out there */
@media screen and (max-width: 420px) {
    .key.black .note { 
        right: 2px; 
    }
}
@media screen and (min-width: 421px) and (max-width: 520px) {
    .key.black .note { /* for some reason the note marker isnt centered when the width of .key.black is so low.  */
        right: 1px; 
    }
}


@media screen and (max-width: 460px) { 
    .keyboard .note {
        width: 14px;
        line-height: 14px;
        height: 14px;
        font-size: 9px;
    }
    .key.black .note { 
        right: 1px;
    }

   

}
/* ... */

